ACETEL NEW/server/verification_output.txt
/app/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
src/scripts/verify_access_control.ts(53,23): error TS2769: No overload matches this call.
  The last overload gave the following error.
    Object literal may only specify known properties, and 'code' does not exist in type 'ObjectId | { readonly _bsontype?: StringQueryTypeCasting | undefined; id?: { [x: number]: number | undefined; readonly BYTES_PER_ELEMENT?: number | undefined; ... 31 more ...; readonly [Symbol.toStringTag]?: "Uint8Array" | undefined; } | { ...; } | undefined; ... 7 more ...; readonly [bsonType]?: StringQueryTypeCast...'.
src/scripts/verify_access_control.ts(62,23): error TS2769: No overload matches this call.
  The last overload gave the following error.
    Object literal may only specify known properties, and 'code' does not exist in type 'ObjectId | { readonly _bsontype?: StringQueryTypeCasting | undefined; id?: { [x: number]: number | undefined; readonly BYTES_PER_ELEMENT?: number | undefined; ... 31 more ...; readonly [Symbol.toStringTag]?: "Uint8Array" | undefined; } | { ...; } | undefined; ... 7 more ...; readonly [bsonType]?: StringQueryTypeCast...'.
src/scripts/verify_access_control.ts(146,54): error TS2339: Property 'title' does not exist on type 'never'.
src/scripts/verify_access_control.ts(147,54): error TS2339: Property 'title' does not exist on type 'never'.
src/scripts/verify_access_control.ts(165,54): error TS2339: Property 'title' does not exist on type 'never'.
src/scripts/verify_access_control.ts(166,54): error TS2339: Property 'title' does not exist on type 'never'.

    at createTSError (/app/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/app/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/app/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/app/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/app/node_modules/ts-node/src/index.ts:1617:30)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
    at Object.require.extensions.<computed> [as .ts] (/app/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1266:32)
    at Function.Module._load (node:internal/modules/cjs/loader:1091:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:164:12) {
  diagnosticCodes: [ 2769, 2769, 2339, 2339, 2339, 2339 ]
}
